update footer height to clear white space bug when hosted. Update font colour on grouse grind page to fix bug on host version.

--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -12,8 +12,8 @@
     background-color: $primary-color;
     color: $primary-color-wht;
     text-align: center;
-    // height: 10%;
-    height: 5rem;
+    height: 6%;
+    // height: 7rem;
     display: flex;
     justify-content: space-between;
     @include tablet {
