--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -26,7 +26,7 @@
     background-size: cover;
     background-position: 2% 80%;
     border-radius: 5rem 5rem 0 0;
-    height: 80vh;
+    height: 90vh;
   }
   &__leadInfo {
     font-size: 2rem;
